test/Recall.lean
import Std.Tactic.GuardMsgs
import Mathlib.Tactic.Recall
import Mathlib.Analysis.Calculus.Deriv.Basic
import Mathlib.Analysis.SpecialFunctions.Trigonometric.Basic
import Mathlib.Data.Complex.Exponential

-- Remark: When the test is run by make/CI, this option is not set, so we set it here.
set_option pp.unicode.fun true
set_option autoImplicit true

/-
Motivating examples from the initial Zulip thread:
https://leanprover.zulipchat.com/#narrow/stream/270676-lean4/topic/recall.20command
-/

section
variable {ğ•œ : Type _} [NontriviallyNormedField ğ•œ]
variable {E : Type _} [NormedAddCommGroup E] [NormedSpace ğ•œ E]
variable {F : Type _} [NormedAddCommGroup F] [NormedSpace ğ•œ F]
recall HasFDerivAt (f : E â†’ F) (f' : E â†’L[ğ•œ] F) (x : E) :=
  HasFDerivAtFilter f f' x (ğ“ x)
end

/--
error: value mismatch
  Complex.exp
has value
  id
but is expected to have value
  fun z â†¦ CauSeq.lim (Complex.exp' z)
-/
#guard_msgs in recall Complex.exp : â„‚ â†’ â„‚ := id

/--
error: value mismatch
  Real.pi
has value
  0
but is expected to have value
  2 * Classical.choose Real.exists_cos_eq_zero
-/
#guard_msgs in recall Real.pi : â„ := 0

/-
Other example tests
-/

recall id (x : Î±) : Î± := x

/--
error: type mismatch
  @id
has type
  {Î± : Sort u_1} â†’ Î± â†’ Î± â†’ â„• : Type u_1
but is expected to have type
  {Î± : Sort u} â†’ Î± â†’ Î± : Sort (imax (u + 1) u)
-/
#guard_msgs in recall id (_x _y : Î±) : â„• := 0

recall id (_x : Î±) : Î±

def foo := 22

recall foo := 22

recall foo : Nat

/--
error: value mismatch
  foo
has value
  23
but is expected to have value
  22
-/
#guard_msgs in recall foo := 23

recall Nat.add_comm (n m : Nat) : n + m = m + n

-- Caveat: the binder kinds are not checked
recall Nat.add_comm {n m : Nat} : n + m = m + n

-- https://leanprover.zulipchat.com/#narrow/stream/270676-lean4/topic/recall.20command/near/376648750
recall add_assoc {G : Type _} [AddSemigroup G] (a b c : G) : a + b + c = a + (b + c)
recall add_assoc

/-- error: unknown constant 'nonexistent' -/
#guard_msgs in recall nonexistent

axiom bar : Nat
/-- error: constant 'bar' has no defined value -/
#guard_msgs in recall bar := bar

recall List.cons_append (a : Î±) (as bs : List Î±) : (a :: as) ++ bs = a :: (as ++ bs) := rfl
